[gd_scene load_steps=19 format=3 uid="uid://gib3b7bmu7vq"]

[ext_resource type="Script" path="res://src/arena.gd" id="1_2d1np"]
[ext_resource type="Script" path="res://src/arena_theme.gd" id="2_od3yl"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_sa7a4"]
[ext_resource type="Material" uid="uid://c825ll8mvnmwq" path="res://data/materials/post_processing/dof.material" id="3_57mfx"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_qfict"]
[ext_resource type="Resource" uid="uid://cnfu2cqie4ou2" path="res://data/arena_themes/sand_stone_arena_theme.tres" id="3_ukhlb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_f2fkr"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="5_d8pjb"]
[ext_resource type="PackedScene" uid="uid://d2ho5gg1g3mc" path="res://prefabs/cursor.tscn" id="7_xb0cn"]
[ext_resource type="PackedScene" uid="uid://5iadts1xwhdp" path="res://prefabs/ui.tscn" id="8_3nbxp"]

[sub_resource type="Resource" id="Resource_b5xt7"]
script = ExtResource("4_f2fkr")
duration = 1.0
transition = 7
ease = 2

[sub_resource type="Resource" id="Resource_d3bfq"]
script = ExtResource("5_d8pjb")
cull_mask = 1048567
h_offset = 0.0
v_offset = 0.0
projection = 1
fov = 75.0
size = 8.0
frustum_offset = Vector2(0, 0)
near = 0.001
far = 4000.0

[sub_resource type="Resource" id="Resource_tcgm5"]
script = ExtResource("5_d8pjb")
cull_mask = 1048571
h_offset = 0.0
v_offset = 0.0
projection = 1
fov = 75.0
size = 8.0
frustum_offset = Vector2(0, 0)
near = 0.001
far = 4000.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_18mpk"]
sky_top_color = Color(0.472231, 0.738573, 0.851356, 1)
sky_horizon_color = Color(1, 1, 1, 1)
ground_bottom_color = Color(0.187548, 0.244628, 0.0319703, 1)
ground_horizon_color = Color(0.535187, 0.671063, 0.806526, 1)

[sub_resource type="Sky" id="Sky_urgai"]
sky_material = SubResource("ProceduralSkyMaterial_18mpk")

[sub_resource type="Environment" id="Environment_bjets"]
background_mode = 2
background_color = Color(0.136715, 0.374687, 0.569955, 1)
sky = SubResource("Sky_urgai")
sky_custom_fov = 64.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.37
ambient_light_energy = 0.1
reflected_light_source = 2
glow_enabled = true
glow_strength = 1.16
glow_blend_mode = 1
fog_light_color = Color(0.548217, 0.716057, 0.763206, 1)
fog_density = 0.001
fog_sky_affect = 0.0
fog_height = 0.85
fog_height_density = 0.7356
fog_depth_begin = 0.0
fog_depth_end = 2828.2

[sub_resource type="Animation" id="Animation_0kdmn"]
resource_name = "begin"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_ripple_effects"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ny8qp"]
_data = {
"begin": SubResource("Animation_0kdmn")
}

[node name="Arena" type="Node3D"]
script = ExtResource("1_2d1np")
arena_themes = Array[ExtResource("2_od3yl")]([ExtResource("3_ukhlb")])

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.383022, 0.321394, 0, 0.642787, 0.766044, -0.5, -0.663413, 0.55667, 6.42788, 15.3209, 11.1334)
cull_mask = 1048567
projection = 1
size = 8.0
near = 0.001

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
script = ExtResource("2_sa7a4")

[node name="DOF" type="ColorRect" parent="Camera3D"]
material = ExtResource("3_57mfx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="IsoCam" type="Node3D" parent="." node_paths=PackedStringArray("follow_target", "follow_targets")]
transform = Transform3D(0.866025, -0.383022, 0.321394, 0, 0.642787, 0.766044, -0.5, -0.663413, 0.55667, 6.42788, 15.3209, 11.1334)
script = ExtResource("3_qfict")
follow_mode = 5
follow_target = NodePath("../Cursor")
follow_targets = [NodePath("../Cursor"), null]
tween_resource = SubResource("Resource_b5xt7")
camera_3d_resource = SubResource("Resource_d3bfq")
follow_damping = true
follow_damping_value = Vector3(0.75, 0.9, 0.75)
follow_distance = 20.0
spring_length = 20.0

[node name="TopCam" type="Node3D" parent="." node_paths=PackedStringArray("follow_target", "follow_targets")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.999999, 0, -0.999999, -4.37114e-08, 0, 20, -8.74228e-07)
script = ExtResource("3_qfict")
follow_mode = 5
follow_target = NodePath("../Cursor")
follow_targets = [NodePath("../Cursor"), null]
tween_resource = SubResource("Resource_b5xt7")
camera_3d_resource = SubResource("Resource_tcgm5")
follow_distance = 20.0
spring_length = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bjets")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.73373, -0.53321, 0.421104, 0, 0.619779, 0.784777, -0.679441, 0.575814, -0.454751, 0, 0, 0)
layers = 7
shadow_enabled = true
shadow_bias = 0.04
shadow_normal_bias = 5.034
shadow_blur = 0.663
directional_shadow_mode = 1
directional_shadow_pancake_size = 0.0

[node name="Cursor" parent="." instance=ExtResource("7_xb0cn")]

[node name="UI" parent="." instance=ExtResource("8_3nbxp")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ny8qp")
}

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
size = Vector3(1, 10, 1)
origin_offset = Vector3(0, -4.9, 0)
box_projection = true
interior = true
cull_mask = 1
reflection_mask = 1048519

[connection signal="on_switch_view" from="UI" to="." method="switch_view"]
